==History

[jerbil-1.0.19 22-Aug-2012]

  add log_daemon to stop and status services

[jerbil-1.0.18 22-Aug-2012]

  Daemons expects STDOUT to be open, so ensure it is!

[jerbil-1.0.17 22-Aug-2012]

  Fix daemon opts that depended on starting a logger

[jerbil-1.0.16 22-Aug-2012]

  Fix problem with log-opts being deleted and not there a second time round

[jerbil-1.0.15 22-Aug-2012]

  Tweaks to sclient.rb to fix daemon problems or help uncover them at least

[jerbil-1.0.14 22-Aug-2012]

  Set log_daemon to true in sbin/jserviced

[jerbil-1.0.13 22-Aug-2012]

  Add log_daemon capability to init files

[jerbil-1.0.12 22-Aug-2012]

  Add log_daemon capability to sbin/jserviced

[jerbil-1.0.11 20-Aug-2012]

  added defaults to key and pid directories in jerbil_service/config

[jerbil-1.0.10 20-Aug-2012]

  fixed cut-and-paste errors in changing group

[jerbil-1.0.9 20-Aug-2012]

  fixed Chuser calls in sbin/jerbild

[jerbil-1.0.8 17-Aug-2012]

  fix another typo in config

[jerbil-1.0.7 17-Aug-2012]

  add require 'etc' to config

[jerbil-1.0.6 17-Aug-2012]

  Fix bug in change_group

[jerbil-1.0.5 17-Aug-2012]

  Provide a separate group parameter cos changing user does not do all the groups

[jerbil-1.0.4 17-Aug-2012]

  Silently ignore register remote and remove remote if the key is invalid to allow 
  co-existence with pre-1.0 versions

[jerbil-1.0.3 15-Aug-2012]

  Ensure only valid servers are remembered during start-up.

[jerbil-1.0.2 15-Aug-2012]

  Add a catchall for connecting to older servers
  
[jerbil-1.0.1 15-Aug-2012]

  Add NoMethodError as a reason why calls tp older servers may fail.
  
[jerbil-1.0.0 15-Aug-2012]

  Release of new version, featuring server discovery, the new jservice scripts to start
  any service, increased reliability, improved jerbil command and other minor changes.

[jerbil-0.99.13 26-Jul-2012]

  Reworked remote server logic to ensure duplicate servers and services are purged

[jerbil-0.99.12 25-Jul-2012]

  further annotations