@@ -1,13 +1,14 @@
 # Created by Jevoom
 #
-# 22-Aug-2012
-#     add log_daemon to stop and status services
+# 24-Aug-2012
+#     Change jservice to use su again as this seems more reliable than changing the user
+#     internally. Also add logging to verify calls.
 
 module Jerbil
-  # version set to 1.0.19
-  Version = '1.0.19'
-  # date set to 22-Aug-2012
-  Version_Date = '22-Aug-2012'
-  #ident string set to: jerbil-1.0.19 22-Aug-2012
-  Ident = 'jerbil-1.0.19 22-Aug-2012'
+  # version set to 1.1.0
+  Version = '1.1.0'
+  # date set to 24-Aug-2012
+  Version_Date = '24-Aug-2012'
+  #ident string set to: jerbil-1.1.0 24-Aug-2012
+  Ident = 'jerbil-1.1.0 24-Aug-2012'
 end
